# cookiecutter-fastapi

./: CONTRIBUTING.md  README.md  cookiecutter.json  setup.py
{{cookiecutter.project_slug}}/: README.md  egg.sh  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/app/core/: events.py
{{cookiecutter.project_slug}}/docs/: version.md
{{cookiecutter.project_slug}}/tests/: test_pagination_behavior.py
