[tool.poetry]
name = "isso"
version = "0.1.0"
description = "项目的简单描述"
authors = ["你的邮箱地址 (you@example.com)"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.87.0"
uvicorn = "0.20.0"
pydantic = "^1.3"
requests = "^2.22.0"
loguru = "^0.6.0"
joblib = "^1.2.0"
mkdocs = "^1.2.3"
shadocs = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^2.0.0"
ipdb = "^0.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
